--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
-target/
+**/target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
-.idea/*
-*.iws
-*.iml
-*.ipr
+**/.idea/*
+**/*.iws
+**/*.iml
+**/*.ipr
 
 ### Eclipse ###
 .apt_generated
@@ -33,3 +33,5 @@ build/
 
 ### Mac OS ###
 .DS_Store
+
+**/dependency-reduced-pom.xml
