--- a/T2/pom.xml
+++ b/T2/pom.xml
@@ -8,10 +8,10 @@
         <groupId>uai.helcio</groupId>
     </parent>
 
-    <artifactId>T1</artifactId>
+    <artifactId>T2</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>T1</name>
+    <name>T2</name>
 
     <build>
         <plugins>
@@ -30,7 +30,7 @@
                             <shadedClassifierName>fat</shadedClassifierName>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>uai.helcio.t1.App</mainClass>
+                                    <mainClass>uai.helcio.t2.App</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
@@ -41,6 +41,11 @@
     </build>
 
     <dependencies>
+        <dependency>
+            <groupId>uai.helcio</groupId>
+            <artifactId>T1</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
