Adição de visualização em tabela de DFAs
* Escrita da tabela do DFA final no arquivo de log;

* Adição de um caso de teste do enunciado.

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
             </dependency>
 
             <dependency>
+                <groupId>de.vandermeer</groupId>
+                <artifactId>asciitable</artifactId>
+                <version>0.3.2</version>
+            </dependency>
+
+            <dependency>
                 <groupId>org.junit.jupiter</groupId>
                 <artifactId>junit-jupiter-api</artifactId>
                 <version>6.0.0-M2</version>
