--- a/T1/pom.xml
+++ b/T1/pom.xml
@@ -71,5 +71,10 @@
             <groupId>info.picocli</groupId>
             <artifactId>picocli</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>de.vandermeer</groupId>
+            <artifactId>asciitable</artifactId>
+        </dependency>
     </dependencies>
 </project>
