--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,14 @@
                 <artifactId>picocli</artifactId>
                 <version>4.7.6</version>
             </dependency>
+
+            <!-- https://mvnrepository.com/artifact/junit/junit -->
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.8.1</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
